[gd_scene load_steps=2 format=3 uid="uid://b8j4q5xr8n3yp"]

[ext_resource type="Script" path="res://addons/claude_mcp/mcp_dock.gd" id="1_3q2xk"]

[node name="MCPDock" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_3q2xk")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "Claude MCP"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Status: Disconnected"

[node name="ConnectButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Connect"

[node name="HSeparator2" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Start MCP server first"
autowrap_mode = 2
